added design part

--- a/index.html
+++ b/index.html
@@ -10,6 +10,94 @@
     <link rel="stylesheet" href="assets/css/styles.css" />
   </head>
   <body>
+    <main>
+      <!-- Hero Section Start -->
+      <section class="hero__section">
+        <div class="container">
+          <div class="hero__content">
+            <div class="hero__data">
+              <div class="hero__quotes">
+                <p class="quotes">
+                  “Every friendship is different because everyone's personality
+                  is different.”
+                </p>
+                <span class="quotes__author">Nargis Fakhri</span>
+              </div>
+              <div class="hero__weather">
+                <div class="weather__container">
+                  <img
+                    src="assets/images/partly_cloudy_day.png"
+                    alt="weather icon"
+                    class="weather__icon"
+                  />
+
+                  <span class="weather__degree">26°C</span>
+                </div>
+                <span class="weather__location">Dhaka</span>
+                <span class="weather__mood">Partly Cloudy</span>
+                <span class="weather__feels--like">Feels Like 27°C</span>
+              </div>
+            </div>
+            <!-- Hero Time -->
+            <div class="hero__time">
+              <div class="time__container">
+                <span class="greetings">Good Morning, It's Currently</span>
+                <div class="time__data">
+                  <span class="hours">12:44</span>
+                  <span class="seconds">:13</span>
+                  <span class="ampm">pm</span>
+                </div>
+                <span class="division">In Dhaka Division, BD</span>
+              </div>
+              <button class="button">More</button>
+            </div>
+          </div>
+        </div>
+      </section>
+      <!-- Hero Section End -->
+
+      <!-- Details Section Start -->
+      <section class="details__section transform">
+        <div class="container">
+          <div class="details__content">
+            <div class="details__data">
+              <span class="details__date">26</span>
+              <span class="details__month">January</span>
+              <span class="details__day">Today's Sunday</span>
+              <span class="details__timezone">Current Timezone</span>
+              <span class="details__timezone--text">Asia/Dhaka</span>
+            </div>
+            <div class="details__weather">
+              <div class="details__weather--container weather__container">
+                <img
+                  src="assets/images/partly_cloudy_day.png"
+                  alt="weather icon"
+                  class="weather__icon"
+                />
+
+                <span class="weather__degree">26°C</span>
+              </div>
+              <span class="weather__location">Dhaka</span>
+              <span class="weather__mood">Partly Cloudy</span>
+              <span class="weather__feels--like">Feels Like 27°C</span>
+              <div class="weather__day--night">
+                <div class="weather__night">
+                  <span class="night__text">Night Temp.</span>
+                  <span class="night__degree">-26°C</span>
+                </div>
+                <div class="weather__day">
+                  <span class="day__text">Night Temp.</span>
+                  <span class="day__degree">-26°C</span>
+                </div>
+              </div>
+            </div>
+          </div>
+        </div>
+      </section>
+      <!-- Details Section End -->
+      <img src="assets/images/night.jpg" alt="BG Image" class="main__bg" />
+    </main>
+
     <!-- JS File -->
     <script src="assets/js/requestAPI.js"></script>
     <script src="assets/js/main.js"></script>
